# guest-sdk

./: .gitignore  Cargo.toml  README.md  bclgg8ipi9gatjabqkrdv8ru0lvaaifj.darc  flepdtsstbmpmnoob9tkmhi9b6hm0fol.darc  manifest  setup-beads.sh
.agents/plans/phase3-boot-scheduling-deadlock/: 00-overview.md  01-no-timer-harness-and-reproducer.md  02-agent-epoll-boot-waits.md  03-verification-and-handback.md
.agents/plans/phase3-game-device-materialization/: 00-overview.md  01-pvblk-module.md  02-boot-toml-and-wiring.md  03-vm-harness-pvblk.md  04-acceptance-tests.md  05-resolution-and-handoff.md
.agents/plans/phase3-ms4-region-publication-acceptance/: 00-overview.md  01-ipc-protocol.md  02-agent-server.md  03-sdk-client.md  04-reverify-regions.md  05-harness-snapshot-fork.md  06-acceptance-test-and-fixture.md  07-ci-docs-beads-evidence.md
.agents/plans/phase3-ms5-execution-in-vm-closeout/: 00-overview.md  01-ledger-preflight-and-evidence-contract.md  02-ms5-roundtrip-and-reattach.md  03-ms3-real-workload-and-pad-set.md  04-determinism-replay-gate.md  05-ci-docs-and-recurring-budget.md  06-tail-closeout-and-handback.md
.agents/plans/phase3-ms5-groundwork-while-blocked/: 00-overview.md  01-checklist-and-handback-diff.md  02-channel-reseed-accessors.md  03-ms5-retriage-and-unblocked-work.md  04-determinism-replay-scaffold.md  05-refwork-residual-and-ledger.md  06-verification-and-handback.md  07-execution-notes.md
.agents/plans/phase3-post-ready-no-frame-under-no-tick/: 00-overview.md  01-source-recovery-and-evidence.md  02-no-timer-post-ready-reproducer.md  03-frame-boundary-contract-and-fix.md  04-verification-and-handoff.md
.agents/requests/phase3-boot-scheduling-deadlock/: 00-overview.md  01-root-cause.md  02-fix-and-verify.md  03-resolution.md  04-verification.md
.agents/requests/phase3-ext-hyp-input-log-and-replay-handoff/: 00-handback.md
.agents/requests/phase3-game-device-materialization/: 00-overview.md  01-options.md  02-verification.md  03-resolution.md
.agents/requests/phase3-ms4-region-publication-acceptance/: 00-overview.md  01-current-state.md  02-framebuffer-contract-change.md  03-requested-work.md  04-verification-offer.md  05-resolution.md  06-verification.md
.agents/requests/phase3-ms5-execution-in-vm-closeout/: 00-overview.md  01-current-state.md  02-requested-work.md  03-verification-offer.md  04-current-status-2026-07-10.md  05-prep-notes.md  06-resolution.md
.agents/requests/phase3-ms5-groundwork-while-blocked/: 00-overview.md  01-current-state.md  02-requested-work.md  03-verification-offer.md  04-resolution.md
.agents/requests/phase3-post-ready-no-frame-under-no-tick/: 00-resolution.md  01-real-artifact-run.md
.agents/requests/phase3-ring-a-doorbell-drain/: 00-overview.md  01-diagnosis.md  02-fix-and-verify.md  03-resolution.md
.beads/: metadata.json
.github/workflows/: ci.yaml  fuzz.yaml
crates/detguest-agent/: Cargo.toml
crates/detguest-agent/src/: boot.rs  channel.rs  commands.rs  control.rs  lib.rs  main.rs  pio.rs  pvblk.rs  region_ipc.rs  runtime.rs  supervise.rs  translate.rs
crates/detguest-host/: Cargo.toml
crates/detguest-host/src/: channel.rs  commands.rs  drain.rs  guestmem.rs  inject.rs  lib.rs  manifest.rs  replay.rs
crates/detguest-host/tests/: capture_handoff.rs  loopback.rs
crates/detguest-host/tests/fixtures/: capture-handoff-v1.txt
crates/detguest-sdk/: Cargo.toml
crates/detguest-sdk/src/: agent_client.rs  beacons.rs  channel.rs  inject.rs  intern.rs  lib.rs  pio.rs  regions.rs  stats_region.rs  translate.rs
crates/detguest-wire/: Cargo.toml
crates/detguest-wire/src/: events.rs  header.rs  lib.rs  manifest.rs  ports.rs  record.rs  regionipc.rs  ring.rs
crates/detguest-wire/tests/: golden_fixtures.rs  loom_ring.rs  proptest_roundtrip.rs
crates/m0-proto-client/: Cargo.toml
crates/m0-proto-client/src/: lib.rs
docs/ci/: intel-runner.md
docs/contracts/: reference-workload-m5.md
docs/prompts/: guest-sdk-in-guest-chain-milestones-3-5.md  phase-1-deterministic-execution-guest-sdk.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_record.rs
image/: KERNEL.md  boot.toml.game-mat  boot.toml.m2  boot.toml.m4-regions  boot.toml.m9-refwork-contract  build.sh  kernel.config
image/patches/: 0001-deterministic-random-get-entropy.patch
prompts/docs/: MAP.md  phase-1-deterministic-execution.md
prompts/docs/guest-sdk/: API.md  ARCHITECTURE.md  IMPLEMENTATION-PLAN.md  INTEGRATION.md  README.md
reviews/ralph-iteration-1-fix-spec-contradicting-skeleton-api-2026-06-09/opus/: 00-overview.md  01-critical-and-important.md  02-suggestions.md  03-positive-notes.md  04-action-items.md
reviews/ralph-iteration-1-fix-spec-contradicting-skeleton-api-2026-06-09/opus2/: 00-overview.md  01-critical-and-important.md  02-suggestions.md  03-positive-notes.md  04-action-items.md
reviews/ralph-iteration-2-workspace-mechanics-tests-vm-fuzz-2026-06-10/opus/: 00-overview.md  01-critical-and-important.md  02-suggestions.md  03-positive-notes.md  04-action-items.md
reviews/ralph-iteration-2-workspace-mechanics-tests-vm-fuzz-2026-06-10/opus2/: 00-overview.md  01-critical-and-important.md  02-suggestions.md  03-positive-notes.md  04-action-items.md
reviews/ralph-iteration-3-create-detguest-host-crate-2026-06-10/opus/: 00-overview.md  01-critical-and-important.md  02-suggestions.md  03-positive-notes.md  04-action-items.md
reviews/ralph-iteration-3-create-detguest-host-crate-2026-06-10/opus2/: 00-overview.md  01-critical-and-important.md  02-suggestions.md  (+2 more)
scripts/: amend-guest-sdk-m3-m5-beads-review.sh  create-guest-sdk-m3-m5-beads.sh  intel-preflight.sh
tests/vm/: Cargo.toml
tests/vm/src/: evidence.rs  lib.rs  replay.rs
tests/vm/src/harness/: icount.rs  memslot.rs  mod.rs  pio.rs  pvblk.rs  snapshot.rs  x86.rs
tests/vm/tests/: boot_probe.rs  determinism_replay.rs  game_materialization.rs  m2_acceptance.rs  m4_acceptance.rs  m4_snapshot.rs  m5_inject_roundtrip.rs  no_timer_boot.rs  no_timer_post_ready.rs  refwork_ready_hold.rs
tests/vm/workloads/: Cargo.toml
tools/dh-padset-export/: Cargo.toml
(+56 files in other folders)
