[workspace]
resolver = "2"
members = [
    "crates/detguest-wire",
    "crates/detguest-agent",
    "crates/detguest-host",
    "crates/m0-proto-client",
    # In-VM KVM test harness. A normal workspace member so hosted CI lanes
    # build/fmt/clippy it everywhere; the KVM-requiring tests themselves are
    # #[ignore] + env-gated (DETGUEST_VM_TESTS=1) and only run on the Intel
    # runner via `cargo test -p detguest-vmtest -- --ignored`.
    "tests/vm",
    # Trivial in-VM test workloads; cross-compiled static (musl) and baked
    # into the initramfs by image/build.sh. Plain bins — they build and pass
    # `cargo test --workspace` everywhere.
    "tests/vm/workloads",
]
# The fuzz crate is excluded: it needs nightly + libfuzzer and must not enter
# the default hosted `cargo test --workspace` lanes. It is its own workspace
# root; build it with `cargo +nightly fuzz run decode_record` from fuzz/.
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"

[workspace.dependencies]
determinism-proto = { path = "../control-plane/crates/determinism-proto", default-features = false }

[profile.release]
lto = true
codegen-units = 1
