[package]
name = "detguest-wire-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
detguest-wire = { path = "../crates/detguest-wire" }

[[bin]]
name = "decode_record"
path = "fuzz_targets/decode_record.rs"
test = false
doc = false
bench = false

# Standalone workspace root: the parent workspace excludes fuzz/ so the
# nightly-only libfuzzer dependency never enters hosted `--workspace` lanes.
[workspace]
