[package]
name = "detguest-agent"
description = "In-guest PID 1 agent: channel setup, workload supervision, host command handling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Static musl binary for the initramfs:
#   cargo build --release --target x86_64-unknown-linux-musl -p detguest-agent

[dependencies]
detguest-wire = { path = "../detguest-wire" }
libc = "0.2"
toml = "0.8"

[[bin]]
name = "detguest-agent"
path = "src/main.rs"
