[package]
name = "detguest-wire"
description = "detchannel wire formats: channel header, ring framing, event/command payloads, region manifest, detcall ABI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["alloc"]
alloc = []

[dependencies]
