[package]
name = "detguest-wire"
description = "detchannel wire formats: channel header, ring framing, event/command payloads, region manifest, detcall ABI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["alloc"]
alloc = []

[dependencies]

[dev-dependencies]
proptest = "1"

# Loom interleaving tests: RUSTFLAGS="--cfg loom" cargo test -p detguest-wire --test loom_ring --release
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }
