[package]
name = "detguest-vmtest"
description = "Minimal KVM test harness for the in-VM tier (Intel box only)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
detguest-host = { version = "0.1.0", path = "../../crates/detguest-host" }
detguest-wire = { path = "../../crates/detguest-wire" }
kvm-bindings = "0.13"
kvm-ioctls = "0.23"
libc = "0.2.186"
linux-loader = { version = "0.13", features = ["bzimage"] }
vm-memory = { version = "0.17", features = ["backend-mmap"] }
